--- a/reveal.js-2.6.2/index.html
+++ b/reveal.js-2.6.2/index.html
@@ -56,11 +56,12 @@
 
 				<section>
 					<h1>Go</h1>
+					<h4><em>La Flexibilidad de Python con la rapidez del código de máquina</em></h4>
 					<ol>
-					<li>Lenguaje de programación de uso general de código del lado del servidor originalmente diseñado para el desarrollo web de contenido dinámico. </li>
-					<li>PHP Hypertext Pre-processor (inicialmente PHP Tools, o, Personal Home Page Tools)</li>
-					<li>Fue creado originalmente por Rasmus Lerdorf</li>
-					<li>Versión: 7.0 (Oct-2015 - Oct-2018</li>
+					<li>Programación imperativa, estructurada y libre. </li>
+					<li>Compilado, estática y fuertemente tipado.</li>
+					<li>Es un lenguaje moderno, por lo que bebe de lo mejor de muchos lenguajes</li>
+					<li>Combina una sintaxis parecida a C con las características y facilidad de lenguajes dinámicos como Python.</li>
 					</ol>
 				</section>
 
@@ -127,17 +128,6 @@
 						<li>Separación MVC.</li>
 						<li>Soporte para AJAX.</li>
 					</ul>
-				</section>
-
-				<section>
-				<h2>Historia:</h2>
-				<ol>	
-					<li>Creador: Andres Felipe Gutierrez</li>
-					<li>"Nació en un esfuerzo por no esforzarme para hacer las cosas."</li>
-					<li>Año de lanzamiento: Enero del 2007</li>
-					<li>Versión Estable: kumbiaphp_1.0 beta, 13 agosto 2009</li>
-					
-				</ol>
 				</section>
 
 				
